Changes made in text

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="contact-me">
         <h2>Get In Touch!</h2>
         <h3>I would love to have a chat with you.</h3>
-        <p class="text">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then hit me up. </p>
+        <p class="text">If you have a project that you want to get started, think you need my help with self care or just fancy saying hey, then hit me up. </p>
         <a class="btn" href="mailto:tanushree.jugran@gmail.com">CONTACT ME</a>
       </div>
     </div>
